monticore-generator/src/test/resources/cocos/invalid/A4011/A4011b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4011;

grammar A4011b {

  A astextends B, C;

}
